docs: Update site URL to GitHub Pages domain

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: localde çalışıyordu
 description: Yazılım/Programlama grubundan haftalık haber bülteni
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://github.com/Bilgisayar-Kavramlari-Toplulugu/localde-calisiyordu" 
+url: "https://bilgisayar-kavramlari-toplulugu.github.io/localde-calisiyordu" 
 markdown: kramdown
 # theme: minima # Removed to use custom layouts exclusively.
 plugins:
