--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: localde çalışıyordu
 description: Yazılım/Programlama grubundan haftalık haber bülteni
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://bilgisayar-kavramlari-toplulugu.github.io/localde-calisiyordu" 
+baseurl: "/localde-calisiyordu" # subpath on GitHub Pages
+url: "https://bilgisayar-kavramlari-toplulugu.github.io"
 markdown: kramdown
 # theme: minima # Removed to use custom layouts exclusively.
 plugins:
